# kafka_to_clickhouse

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  go.mod  go.sum
.github/workflows/: rust.yaml
dockerfile/: Dockerfile
src/: error.rs  lib.rs  main.go  main.rs  parser.rs  sink.rs  source.rs
src/app/: app.go
src/pipeline/: pipeline.go
test/: rule_test.go
