[package]
name = "KafkaSync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
serde_json = "1.0.114"
async-trait = "0.1"
clap = { version = "4.5.2", features = ["derive"] }
config = "0.14"
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
chrono = "0.4.35"
derive_builder = "0.20.0"

thiserror = "*"
regex = "*"
clickhouse = { version = "0.11.6", features = ["default", "lz4"] }
percent-encoding = "*"